--- a/3d2d.html
+++ b/3d2d.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="ja">
-    hello
+    <canvas id="canvas"></canvas>
     <script type="text/javascript" src="3d2d.js"></script>
 </html>
