--- a/3d2d.html
+++ b/3d2d.html
@@ -2,4 +2,6 @@
 <html lang="ja">
     <canvas id="canvas"></canvas>
     <script type="text/javascript" src="3d2d.js"></script>
+    <input type="button" id="saveimgbtn" value="save image">
+    <script type="text/javascript" src="saveimg.js"></script>
 </html>
