--- a/3d2d.html
+++ b/3d2d.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <canvas id="canvas"></canvas>
-    <script type="text/javascript" src="3d2d.js"></script>
-    <input type="button" id="saveimgbtn" value="save image">
-    <script type="text/javascript" src="saveimg.js"></script>
+    <head>
+        <meta charset="utf-8">
+        <title>3d2d さんじにじ</title>
+        <style>
+            body {margin: 0; }
+            canvas {width: 100%; height: 100% }
+        </style>
+    </head>
+    <body>
+        <script src="three.min.js"></script>
+        <script src="3d2d.js"></script>
+
+        <input type="button" id="saveimgbtn" value="save image">
+        <script src="saveimg.js"></script>
+    </body>
 </html>
