--- a/3d2d.html
+++ b/3d2d.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <script src="three.min.js"></script>
+        <script src="OrbitControls.js"></script>
         <script src="3d2d.js"></script>
 
         <input type="button" id="saveimgbtn" value="save image">
