add button to reset camera position

--- a/3d2d.html
+++ b/3d2d.html
@@ -9,11 +9,12 @@
         </style>
     </head>
     <body>
+        <input type="button" id="camerareest" value="reset camera position">
+        <input type="button" id="saveimgbtn" value="save image">
+
         <script src="three.min.js"></script>
         <script src="OrbitControls.js"></script>
         <script src="3d2d.js"></script>
-
-        <input type="button" id="saveimgbtn" value="save image">
         <script src="saveimg.js"></script>
     </body>
 </html>
