textarea to add elements to scene

--- a/3d2d.html
+++ b/3d2d.html
@@ -9,6 +9,20 @@
         </style>
     </head>
     <body>
+        <form name="form">
+            <textarea name="textarea" rows="20" cols="80">
+var geometry = new THREE.Geometry();
+geometry.vertices.push(new THREE.Vector3(-10, 0, 0));
+geometry.vertices.push(new THREE.Vector3(0, 10, 0));
+geometry.vertices.push(new THREE.Vector3(10, 0, 0));
+var line = new THREE.Line(geometry, material);
+scene.add(line);
+
+var geometry = new THREE.CircleGeometry(10, 64, Math.PI, Math.PI);
+geometry.vertices.shift();
+scene.add(new THREE.Line(geometry, material));
+            </textarea>
+        </form>
         <input type="button" id="camerareest" value="reset camera position">
         <input type="button" id="saveimgbtn" value="save image">
 
