--- a/3d2d.html
+++ b/3d2d.html
@@ -20,9 +20,9 @@ scene.add(line);
 
 var geometry = new THREE.CircleGeometry(10, 64, Math.PI, Math.PI);
 geometry.vertices.shift();
-scene.add(new THREE.Line(geometry, material));
-            </textarea>
+scene.add(new THREE.Line(geometry, material));</textarea>
         </form>
+        <input type="button" id="redraw" value="redraw">
         <input type="button" id="camerareest" value="reset camera position">
         <input type="button" id="saveimgbtn" value="save image">
 
